--- a/custom_modules/machine_module/static/src/ppc_plan_view/css/ppc_plan_view.css
+++ b/custom_modules/machine_module/static/src/ppc_plan_view/css/ppc_plan_view.css
@@ -12,7 +12,7 @@ table.internal_approved_plan_table th, .internal_approved_plan_table td {
 border:0.5px solid #00000059;
 }
 .reprocess_table td{
-border:0.5px solid #00000059;
+/* border:0.5px solid #00000059; */
 }
 .internal_plan_buttons{
 width: 100%;
