--- a/custom_modules/ppc/views/ppc_view.xml
+++ b/custom_modules/ppc/views/ppc_view.xml
@@ -9,45 +9,51 @@
                 <sheet>
                     <div id="ppc_order_form">
                         <group col="2">
-                        <group>
-                            <field name="ppLot"/>
-                            <field name="fabricType"/>
-                            <field name="orderStatus"/>
-                            <field name="urgencyStatus"/>
-                            <field name="placement_date"/>
-                            <field name="dispatch_date"/>
-                            <field name="greigeWidth"/>
-                            <field name="finishedGreigeWidth"/>
-                            <field name="rel"/>
-                            <field name="tol"/>
-                            <field name="requiredQuantity"/>
-                            <field name="totalRequiredQuantity"/>
+                            <group>
+                                <field name="ppLot"/>
+                                <field name="fabricType"/>
+                                <field name="urgencyStatus"/>
+                                <field name="placement_date"/>
+                                <field name="dispatch_date"/>
+                                <field name="greigeWidth"/>
+                                <field name="finishedGreigeWidth"/>
+                                <field name="rel"/>
+                                <field name="tol"/>
+                                <field name="requiredQuantity"/>
+                                <field name="totalRequiredQuantity"/>
+                            </group>
+                            <group>
+                                <field name="classification" options="{'no_create': True}">
+                                    <tree>
+                                        <field name="classification_name"/>
+                                    </tree>
+                                    <form>
+                                        <field name="classification_name" style="text-transform:capitalize;"/>
+                                    </form>
+                                </field>
+                                <field name="customers"/>
+                                <field name="finish"/>
+                                <field name="orderNumber"/>
+                                <field name="articleNumber"/>
+                                <field name="greyLotNumber"/>
+                                <field name="color"/>
+                                <field name="weave"/>
+                                <field name="meters"/>
+                                <field name="supplier"/>
+                                <field name="sourceWeft"/>
+                                <field name="sourceWarp"/>
+                                <field name="remarks"/>
+                            </group>
                         </group>
-                        <group>
-                            <field name="finish"/>
-                            <field name="orderNumber"/>
-                            <field name="articleNumber"/>
-                            <field name="greyLotNumber"/>
-                            <field name="color"/>
-                            <field name="weave"/>
-                            <field name="meters"/>
-                            <field name="supplier"/>
-                            <field name="sourceWeft"/>
-                            <field name="sourceWarp"/>
-                            <field name="remarks"/>
-                        </group>
-                    </group>
-                    <div style="text-align: right;">
-                        <button name="save_data" string="Save" type="object" class="btn-primary ppc_order_save_btn"/>
+                        <div style="text-align: right;">
+                            <button name="save_data" string="Save" type="object" class="btn-primary ppc_order_save_btn"/>
+                        </div>
                     </div>
-                    </div>
-
                 </sheet>
             </form>
         </field>
     </record>
-
-    <!-- Action For Machine Data View -->
+    <!-- Action For PPC Add Order -->
     <record id="ppc_order_form_action" model="ir.actions.act_window">
         <field name="name">PPC Order Form</field>
         <field name="type">ir.actions.act_window</field>
@@ -60,14 +66,92 @@
         </field>
     </record>
 
+
+<!--    PPC ADD NEW CLASSIFICATION FORM-->
+    <record id="ppc_add_classification_form" model="ir.ui.view">
+        <field name="name">ppc.add.classification.form</field>
+        <field name="model">order.classification</field>
+        <field name="arch" type="xml">
+            <form autocommit="0">
+                <sheet>
+                    <div id="ppc_order_form">
+                        <group>
+                            <field name="classification_name"/>
+                        </group>
+                    </div>
+                     <div style="text-align: right;">
+                         <button name="addClassification" string="Save" type="object" class="btn-primary black_button"/>
+                     </div>
+                </sheet>
+            </form>
+        </field>
+    </record>
+        <!-- Action For PPC ADD NEW CLASSIFICATION -->
+    <record id="ppc_add_classification_form_action" model="ir.actions.act_window">
+        <field name="name">PPC Add Classification Form</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">order.classification</field>
+        <field name="view_mode">form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create a new Order Class
+            </p>
+        </field>
+    </record>
+
+
+
+
+    <!--    PPC ADD NEW CUSTOMER FORM-->
+    <record id="ppc_add_customer_form" model="ir.ui.view">
+        <field name="name">ppc.add.customer.form</field>
+        <field name="model">customers</field>
+        <field name="arch" type="xml">
+            <form autocommit="0">
+                <sheet>
+                    <div id="ppc_order_form">
+                        <group>
+                            <field name="name"/>
+                        </group>
+                    </div>
+<!--                     <div style="text-align: right;">-->
+<!--                         <button name="addClassification" string="Save" type="object" class="btn-primary black_button"/>-->
+<!--                     </div>-->
+                </sheet>
+            </form>
+        </field>
+    </record>
+        <!-- Action For PPC ADD NEW CLASSIFICATION -->
+    <record id="ppc_add_customer_form_action" model="ir.actions.act_window">
+        <field name="name">PPC Add Customer Form</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">customers</field>
+        <field name="view_mode">form</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create a new Customer
+            </p>
+        </field>
+    </record>
+
+
         <!--  PPC Orders View Action  -->
     <record id="ppc_order_view_action" model="ir.actions.client">
         <field name="name">PPC Orders View</field>
         <field name="tag">ppc.ppc_order_view_js</field>
     </record>
 
-    <menuitem name="PPC Orders" id="ppc_order_view" sequence="-2" action="ppc_order_view_action" />
-    <menuitem name="Add New Order" id="ppc_main_menu" sequence="0" action="ppc_order_form_action" parent="ppc_order_view"/>
+            <!--  PPC Orders Approve Action  -->
+    <record id="approve_ppc_order_action" model="ir.actions.client">
+        <field name="name">Approve PPC Orders</field>
+        <field name="tag">ppc.approve_ppc_order_js</field>
+    </record>
 
+    <menuitem name="PPC Orders" id="ppc_order_view" sequence="-2" action="ppc_order_view_action" />
+    <menuitem name="Add Order" id="ppc_main_menu" sequence="0" parent="ppc_order_view"/>
+    <menuitem name="Add New Order" id="ppc_add_order_menu" sequence="0" action="ppc_order_form_action" parent="ppc_main_menu"/>
+    <menuitem name="Add New Classification" id="ppc_order_classification" sequence="1" action="ppc_add_classification_form_action" parent="ppc_main_menu"/>
+    <menuitem name="Add New Customer" id="ppc_order_customer" sequence="2" action="ppc_add_customer_form_action" parent="ppc_main_menu"/>
+    <menuitem name="Approve PPC Orders" id="approve_ppc_order" sequence="0" action="approve_ppc_order_action" />
 </odoo>
 
