--- a/custom_modules/ppc/views/ppc_view.xml
+++ b/custom_modules/ppc/views/ppc_view.xml
@@ -66,7 +66,6 @@
         </field>
     </record>
 
-
 <!--    PPC ADD NEW CLASSIFICATION FORM-->
     <record id="ppc_add_classification_form" model="ir.ui.view">
         <field name="name">ppc.add.classification.form</field>
@@ -98,9 +97,6 @@
             </p>
         </field>
     </record>
-
-
-
 
     <!--    PPC ADD NEW CUSTOMER FORM-->
     <record id="ppc_add_customer_form" model="ir.ui.view">
@@ -147,8 +143,7 @@
         <field name="tag">ppc.approve_ppc_order_js</field>
     </record>
 
-
-
+            <!--  PPC Upload Excel Data Screen  -->
     <record id="get_excel_data_action" model="ir.actions.client">
         <field name="name">Upload Excel File</field>
         <field name="tag">ppc.get_excel_data_js</field>
