--- a/custom_modules/ppc/views/ppc_view.xml
+++ b/custom_modules/ppc/views/ppc_view.xml
@@ -66,69 +66,6 @@
         </field>
     </record>
 
-<!--    PPC ADD NEW CLASSIFICATION FORM-->
-    <record id="ppc_add_classification_form" model="ir.ui.view">
-        <field name="name">ppc.add.classification.form</field>
-        <field name="model">order.classification</field>
-        <field name="arch" type="xml">
-            <form autocommit="0">
-                <sheet>
-                    <div id="ppc_order_form">
-                        <group>
-                            <field name="classification_name"/>
-                        </group>
-                    </div>
-                     <div style="text-align: right;">
-                         <button name="addClassification" string="Save" type="object" class="btn-primary black_button"/>
-                     </div>
-                </sheet>
-            </form>
-        </field>
-    </record>
-        <!-- Action For PPC ADD NEW CLASSIFICATION -->
-    <record id="ppc_add_classification_form_action" model="ir.actions.act_window">
-        <field name="name">PPC Add Classification Form</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">order.classification</field>
-        <field name="view_mode">form</field>
-        <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-                Create a new Order Class
-            </p>
-        </field>
-    </record>
-
-    <!--    PPC ADD NEW CUSTOMER FORM-->
-    <record id="ppc_add_customer_form" model="ir.ui.view">
-        <field name="name">ppc.add.customer.form</field>
-        <field name="model">customers</field>
-        <field name="arch" type="xml">
-            <form autocommit="0">
-                <sheet>
-                    <div id="ppc_order_form">
-                        <group>
-                            <field name="name"/>
-                        </group>
-                    </div>
-<!--                     <div style="text-align: right;">-->
-<!--                         <button name="addClassification" string="Save" type="object" class="btn-primary black_button"/>-->
-<!--                     </div>-->
-                </sheet>
-            </form>
-        </field>
-    </record>
-        <!-- Action For PPC ADD NEW CLASSIFICATION -->
-    <record id="ppc_add_customer_form_action" model="ir.actions.act_window">
-        <field name="name">PPC Add Customer Form</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">customers</field>
-        <field name="view_mode">form</field>
-        <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-                Create a new Customer
-            </p>
-        </field>
-    </record>
 
 
         <!--  PPC Orders View Action  -->
@@ -152,8 +89,8 @@
     <menuitem name="PPC Orders" id="ppc_order_view" sequence="-2" action="ppc_order_view_action" />
     <menuitem name="Add Order" id="ppc_main_menu" sequence="0" parent="ppc_order_view"/>
     <menuitem name="Add New Order" id="ppc_add_order_menu" sequence="0" action="ppc_order_form_action" parent="ppc_main_menu"/>
-    <menuitem name="Add New Classification" id="ppc_order_classification" sequence="1" action="ppc_add_classification_form_action" parent="ppc_main_menu"/>
-    <menuitem name="Add New Customer" id="ppc_order_customer" sequence="2" action="ppc_add_customer_form_action" parent="ppc_main_menu"/>
+    <menuitem name="Classifications" id="ppc_order_classification" sequence="1" action="ppc_add_classification_form_action" parent="ppc_main_menu"/>
+    <menuitem name="Customers" id="ppc_order_customer" sequence="2" action="ppc_add_customer_form_action" parent="ppc_main_menu"/>
     <menuitem name="Upload Excel Data" id="upload_excel_data" sequence="3" action="get_excel_data_action" parent="ppc_main_menu"/>
     <menuitem name="Approve PPC Orders" id="approve_ppc_order" sequence="0" action="approve_ppc_order_action" />
 </odoo>
