--- a/custom_modules/bleaching_dept/static/src/machine_route/css/machine_route.css
+++ b/custom_modules/bleaching_dept/static/src/machine_route/css/machine_route.css
@@ -40,3 +40,8 @@ font-size: 15px;
 margin-top: 2%;
 box-shadow: rgba(0, 0, 0, 0.5) 0px 10px 15px;
 }
+input#delayInput {
+    width: 10%;
+    margin-top: 3%;
+    display: inline;
+}
