--- a/custom_modules/bleaching_dept/views/bleaching_dept.xml
+++ b/custom_modules/bleaching_dept/views/bleaching_dept.xml
@@ -24,11 +24,26 @@
         <field name="tag">bleaching_dept.machine_params_js</field>
     </record>
 
+     <!--  Machine Status action  -->
+    <record id="machine_status_action" model="ir.actions.client">
+        <field name="name">Bleaching Machines Status</field>
+        <field name="tag">bleaching_dept.machine_status_js</field>
+    </record>
+
+    <!--  Machine Params Selector action  -->
+    <record id="machine_params_selector_action" model="ir.actions.client">
+        <field name="name">Bleaching Machines Params Selector</field>
+        <field name="tag">bleaching_dept.params_selector_js</field>
+    </record>
+
+
     <menuitem name="Bleaching Dept" id="create_internal_plan" sequence="-3" action="create_internal_plan_action"/>
     <menuitem name="Order Selection" id="order_selection" sequence="1" action="order_selection_action" parent="create_internal_plan"/>
     <menuitem name="Machine Types" id="machine_type" sequence="2" action="bleaching_add_machine_type_tree_action" parent="create_internal_plan"/>
     <menuitem name="Machines" id="bleaching_add_machine" sequence="3" action="bleaching_add_machine_tree_action" parent="create_internal_plan"/>
     <menuitem name="Routing" id="machine_routing" sequence="4" action="machine_route_selection_action" parent="create_internal_plan"/>
     <menuitem name="Params" id="machine_params" sequence="5" action="machine_params_action" parent="create_internal_plan"/>
+    <menuitem name="Status" id="machine_status" sequence="6" action="machine_status_action" parent="create_internal_plan"/>
+    <menuitem name="Select Params" id="machine_params_selector" sequence="7" action="machine_params_selector_action" parent="create_internal_plan"/>
 </odoo>
 
