--- a/custom_modules/bleaching_dept/static/src/order_details/css/order_details.css
+++ b/custom_modules/bleaching_dept/static/src/order_details/css/order_details.css
@@ -25,3 +25,143 @@ button.finalize_order_btn {
     margin-left: 2%;
     margin-bottom: 2%;
 }
+.fabric_type_selector{
+    margin-top: 1%;
+    border-radius: 0.25rem;
+    padding: 5px 10px 5px 10px;
+    background-color: white;
+    border: 1px solid #80808070 !important;
+    margin-bottom:1%;
+}
+.fabric_issuance_fom {
+    margin: 2%;
+    padding: 0% 2% 2% 2%;
+    border: 1px solid #8080808a;
+    border-radius: 5px;
+}
+
+
+/* Global CSS, you probably don't need that */
+    .clearfix:after {
+        clear: both;
+        content: "";
+        display: block;
+        height: 0;
+    }
+
+    .container {
+        font-family: 'Lato', sans-serif;
+        width: 1000px;
+        margin: 0 auto;
+    }
+
+    .wrapper {
+/*        display: table-cell;   */
+        margin-top: 1%;
+        vertical-align: middle;
+        margin-right: 2%;
+    }
+
+    .nav {
+        margin-top: 40px;
+    }
+
+    .pull-right {
+        float: right;
+    }
+
+    a, a:active {
+        color: #333;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #999;
+    }
+
+    /* Breadcrups CSS */
+
+    .arrow-steps .step {
+        font-size: 17px;
+        text-align: center;
+        color: #666;
+        cursor: default;
+        margin: 0 3px;
+        padding: 10px 10px 10px 30px;
+        min-width: 180px;
+        /* float: left; */
+        position: relative;
+        background-color: #d9e3f7;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      transition: background-color 0.2s ease;
+    }
+
+    .arrow-steps .step:after,
+    .arrow-steps .step:before {
+        content: " ";
+        position: absolute;
+        top: 0;
+        right: -16px;
+        width: 0;
+        height: 0;
+        border-top: 22px solid transparent;
+        border-bottom: 25px solid transparent;
+        border-left: 17px solid #d9e3f7;
+        z-index: 2;
+      transition: border-color 0.2s ease;
+    }
+
+    .arrow-steps .step:before {
+        right: auto;
+        left: 0;
+        border-left: 17px solid #fff;
+        z-index: 0;
+    }
+
+    .arrow-steps .step:first-child:before {
+        border: none;
+    }
+
+    .arrow-steps .step:first-child {
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+    }
+
+    .arrow-steps .step span {
+        position: relative;
+    }
+
+    .arrow-steps .step span:before {
+        opacity: 0;
+        content: "✔";
+        position: absolute;
+        top: -2px;
+        left: -20px;
+    }
+
+    .arrow-steps .step.done span:before {
+        opacity: 1;
+        -webkit-transition: opacity 0.3s ease 0.5s;
+        -moz-transition: opacity 0.3s ease 0.5s;
+        -ms-transition: opacity 0.3s ease 0.5s;
+        transition: opacity 0.3s ease 0.5s;
+    }
+
+    .arrow-steps .step.current {
+        color: #fff;
+        background-color: #23468c;
+    }
+
+    .arrow-steps .step.current:after {
+        border-left: 17px solid #23468c;
+    }
+
+
+
+    .arrow-steps {
+        display: flex; /* Add this property */
+        justify-content: flex-end; /* Add this property to align steps to the right */
+    }
